<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LiquidGalaxy OpenData</string>
    <string name="action_settings">Settings</string>
    <string name="ds">Data Sources</string>
    <string name="newds">Add new data sources.</string>
    <string name="manageds">Manage data sources.</string>
    <string name="lg">LG</string>
    <string name="connect">Connect to a Liquid Galaxy.</string>
    <string name="security">Security</string>
    <string name="pwd">Change or Set a password.</string>
    <string name="title_activity_new_url">newURLActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_newurl">New data source</string>
    <string name="urlhint">URL</string>
    <string name="next">Next</string>
    <string name="Back">Back</string>
    <string name="error_message_bad_url">Error: Invalid URL!</string>
    <string name="error_message_file_not_found">Error: File not found!</string>
    <string name="error_message_general">Error downloading file!</string>
    <string name="status_text_default">Enter the URL of the file to download.</string>
    <string name="progress_dialog_title_downloading">Downloading...</string>
    <string name="progress_dialog_title_connecting">Connecting...</string>
    <string name="progress_dialog_message_prefix_downloading">Downloading file</string>
    <string name="progress_dialog_message_prefix_connecting">Connecting to</string>
    <string name="user_message_download_complete">Download complete!</string>
    <string name="user_message_download_canceled">Download canceled!</string>
    <string name="csvhint">CSV</string>
    <string name="csvmappingname">Select your document\'s column that represents the points name.</string>
    <string name="name">Name</string>
    <string name="csvmappingdesc">Select your document\'s column that represents the points description.</string>
    <string name="desc">Description</string>
    <string name="csvmappingcoords">Select your document\'s column that represents the coordinates.</string>
    <string name="coords">Coordinates</string>
    <string name="csvmappingquestion">How are the coordinates represented on your document?</string>
    <string name="singlecoords">One single field</string>
    <string name="separatecoords">Separate fields</string>
    <string name="coordtype">Coordinade representation</string>
    <string name="csvmappingcoordx">Select your document\'s column that represents the Longitude.</string>
    <string name="coordx">Longitude</string>
    <string name="csvmappingcoordy">Select your document\'s column that represents the Latitude.</string>
    <string name="coordy">Latitude</string>
    <string name="Finish">Finish</string>
    <string name="title_activity_connection">Connection</string>
    <string name="user">User:</string>
    <string name="password">Password:</string>
    <string name="ip">IP:</string>
    <string name="sshkey">SSH key:</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="title_activity_scripts">Scripts</string>
    <string name="scripts">Launch a script.</string>
    <string name="querytxt">Query.txt path:</string>
    <string name="kmlstxt">kmls.txt path:</string>
    <string name="kmlsfolder">kmls folder path:</string>
    <string name="kmlurl">kmls server url:</string>
    <string name="title_activity_manage_data">Manage Data</string>

</resources>
