<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".newurl">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_above="@+id/relativeLayout">

        <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/textView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dip"
                android:paddingBottom="2dip"
                android:paddingLeft="5dip"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/csvhint"/>

        <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/scrollView">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/description"
                        android:text="@string/csvmappingname"/>

                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/title"
                            android:text="@string/name"
                            />

                    <RadioGroup
                            android:id="@+id/radioName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-4dp">

                    </RadioGroup>

                    <RadioGroup
                            android:id="@+id/radioCoords"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-4dp"
                            android:visibility="gone"
                            android:focusableInTouchMode="false"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/relativeLayout">

        <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dip"
                android:background="?android:attr/dividerVertical"
                android:layout_alignParentTop="true"/>

        <View
                android:id="@+id/ViewColorPickerHelper"
                android:layout_width="1dip"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="4dip"
                android:layout_marginTop="4dip"
                android:background="?android:attr/dividerVertical"
                android:layout_centerHorizontal="true"/>
        <Button
                android:id="@+id/BtnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@id/ViewColorPickerHelper"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/Back"
                android:layout_alignParentBottom="true"/>
        <Button
                android:id="@+id/BtnNextlayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/next"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/ViewColorPickerHelper"/>
    </RelativeLayout>

</RelativeLayout>
